# Feedback_searcher

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
apps/api/: dependencies.py  main.py  storage.py
apps/api/core/: config.py
apps/api/routers/: analytics.py  assistant.py  domain.py  feedback.py  social.py  sources.py
apps/web/: README.md  app.js  index.html  styles.css
apps/worker/: main.py
connectors/sample_dataset/: connector.py
connectors/social/: __init__.py  base.py  platforms.py  registry.py
docs/: architecture.md  source-connectors.md
domain-packs/ecommerce/: domain.json
domain-packs/insurance/: domain.json
domain-packs/telecom/: domain.json
infrastructure/docker/: api.Dockerfile
services/ai_analysis/: classifier.py  pipeline.py
services/analytics/: metrics.py
services/ingestion/: cleaning.py  pipeline.py  social_pipeline.py
services/notifications/: rules.py
services/search/: retrieval.py
services/vector_store/: __init__.py  embeddings.py  store.py
shared/events/: contracts.py
shared/schemas/: __init__.py  feedback.py  sources.py
shared/security/: privacy.py
tests/: test_api.py  test_classifier.py  test_connector.py  test_ingestion.py  test_social_vector.py
